# rag-enterprise-experiments

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: pr.md
.claude/plans/: plan-audit-logging.md  plan-generation.md  plan-guardrails.md  plan-hierarchical-chunking.md  plan-rag-ingest-retrieval.md  plan-rbac-filter.md  plan-remove-multi-tenancy.md
data/docs/confidential/: acquisition-plans.meta.json  executive-compensation.md  executive-compensation.meta.json
data/docs/internal/: employee-handbook.meta.json  it-security-policy.md  it-security-policy.meta.json
data/docs/public/: company-overview.meta.json  product-faq.md  product-faq.meta.json
data/sample-docs/confidential/: acquisition-plans.md  acquisition-plans.meta.json  executive-compensation.meta.json
data/sample-docs/internal/: employee-handbook.md
data/sample-docs/public/: company-overview.md  product-faq.meta.json
docs/: evaluation-framework.md
logs/: .gitkeep
src/: __init__.py  app.py
src/rag/: __init__.py  audit.py  config.py  generate.py  guardrails.py  hierarchy.py  ingest.py  models.py  prompts.py  rbac.py  retrieve.py
src/rag/evals/: __init__.py  context_quality_evals.py  groundedness_evals.py  metrics.py  models.py  pipeline_evals.py  report.py  retrieval_evals.py  runner.py  safety_evals.py
tests/: conftest.py  test_audit.py  test_evals.py  test_generate.py  test_guardrails_detection.py  test_guardrails_mitigation.py  test_guardrails_reproduction.py  test_ingest.py  test_rbac.py  test_retrieve.py
(+8 files in other folders)
